--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>HBD love</title>	    
+    <title>Happy Birthday Kesar</title>	    
     <link type="text/css" rel="stylesheet" href="./file/default.css">
     <script type="text/javascript" src="./file/jquery.min.js"></script>
     <script type="text/javascript" src="./file/jscex.min.js"></script>
@@ -30,13 +30,14 @@
         <div id="wrap">
             <div id="text">
                 <div id="code">
-                    <span class="say">My beautiful wife 💞</span><br>
-                    <span class="say">Happy Birthday 🎈</span><br>
-                    <span class="say">May Allah bless you 🍀</span><br>
-                    <span class="say">And give u many happiness 💕</span><br>
-                    <span class="say">I loved you ❤️</span><br>
-                    <span class="say">And I will always love u 🥺 ❤️</span><br>
-                    <span class="say">Hope u have a great day today ❤️😘</span><br>
+                    
+                    <span class="say">🎉Happy Birthday Beautiful! 🎂 <br>
+                        To someone who’s not just a wonderful , but also someone who makes my heart smile a little extra every time we talk 😌💫<br>
+                        May your day be as beautiful, kind, and amazing as you are.<br><br>
+                        Here’s to laughter, good vibes, and secretly hoping I get to celebrate many more birthdays by your side 💖<br>  
+                    </span>
+                    <span class="say">Hope u have a great day today ❤️😘</span><br><br>
+                    <span class="say">Note:- "Jaldi Reply apvanu su leshe baki have to vaat karvanu j bandh kari deva 🥺"</span><br>
                 </div>
             </div>
             <div id="clock-box">
